Source files at 2.5-hour mark.

--- a/optionC_modernize.html
+++ b/optionC_modernize.html
@@ -9,6 +9,7 @@
 	<div id="wrapper">
 		<div id="header">
 			<img src="img/logo.png" alt="Modernize logo">
+			<p>Call Us: (66)8 234 678</p>
 		</div>
 		<ul id="sitenav">
 			<a href="#">Home</a>
@@ -57,27 +58,30 @@
 			<button>Buy Now</button>
 		</div>
 		<div id="portfolio">
-			<h4>Portfolio</h4>
+			<div>
+				<h4>Portfolio</h4>
+				<a href="#">View All Projects --></a>
+			</div>
 			<ul>
 				<li>
 					<img src="img/portfolio1.png" alt="portfolio num 1">
-					<h5>Built-in Shortcode</h5>
-					<p>Some white text here</p>
+					<a href="#">Built-in Shortcode</a>
+					<p>You can easily use shortcode via icons in text editor. Easy! Cras mattis consectetur purus sit amet fermentum. Vestibulum id ligula porta felis eulsmo</p>
 				</li>
 				<li>
 					<img src="img/portfolio2.png" alt="portfolio num 2">
-					<h5>New Page Builder</h5>
-					<p>Some white text here</p>
+					<a href="#">New Page Builder</a>
+					<p>Our page builder is the most flixible tool to create page. We provide much much options for each items, moreover, you can easily manage items via dr</p>
 				</li>
 				<li>
 					<img src="img/portfolio3.png" alt="portfolio num 3">
-					<h5>Access Elements Color</h5>
-					<p>Some white text here</p>
+					<a href="#">Access Elements Color</a>
+					<p>You can access almost every elements color easily via admin panel. Now creating unique website is not a big deal anymore! Morbi leo risus, porta ac</p>
 				</li>
 				<li>
 					<img src="img/portfolio4.png" alt="portfolio num 4">
-					<h5>3 Custom Post Types</h5>
-					<p>Some white text here</p>
+					<a href="#">3 Custom Post Types</a>
+					<p>We provide 3 custom post types for most flexibility of usage. We have portfolio post type which also has its own single page style. Testimonial, you c</p>
 				</li>
 			</ul>
 		</div>
