Source files at 3.5-hour mark (turn-in).

--- a/optionC_modernize.html
+++ b/optionC_modernize.html
@@ -11,14 +11,16 @@
 			<img src="img/logo.png" alt="Modernize logo">
 			<p>Call Us: (66)8 234 678</p>
 		</div>
-		<ul id="sitenav">
-			<a href="#">Home</a>
-			<a href="#">Blog</a>
-			<a href="#">Portfolio</a>
-			<a href="#">Shortcodes</a>
-			<a href="#">Features</a>
-			<a href="#">Contact</a>
-		</ul>
+		<div id="sitenav">
+			<div>
+				<a href="#">Home</a>
+				<a href="#">Blog &#187;</a>
+				<a href="#">Portfolio &#187;</a>
+				<a href="#">Shortcodes &#187;</a>
+				<a href="#">Features &#187;</a>
+				<a href="#">Contact</a>
+			</div>
+		</div> <!-- 1-element div to get right-borders to look like | -->
 		<img src="img/main_pic.png" alt="sleeping lady pic">
 		<ul id="contentnav">
 			<li>
@@ -84,6 +86,9 @@
 					<p>We provide 3 custom post types for most flexibility of usage. We have portfolio post type which also has its own single page style. Testimonial, you c</p>
 				</li>
 			</ul>
+		</div>
+		<div id="footer">
+			<a href="#">Back To Top</a>
 		</div>
 	</div>
 </body>
